src/objects/Passenger__c.object
<CustomObject>
    <description>This is the junction between a Passenger Manifest and a Contact.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Passenger</relationshipLabel>
        <relationshipName>Passenger</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Passenger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Passenger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passenger_Manifest__c</fullName>
        <label>Passenger Manifest</label>
        <referenceTo>Passenger_Manifest__c</referenceTo>
        <relationshipLabel>Passenger</relationshipLabel>
        <relationshipName>Passenger</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Passenger</label>
    <nameField>
        <displayFormat>P{000000}</displayFormat>
        <label>Passenger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passenger</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>